--- a/HTTP/HttpClientSetupView.xaml
+++ b/HTTP/HttpClientSetupView.xaml
@@ -28,7 +28,9 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
@@ -148,8 +150,70 @@
             HorizontalScrollBarVisibility="Auto"
             VerticalScrollBarVisibility="Auto" />
 
-        <Button
+        <Expander
             Grid.Row="5"
+            Grid.ColumnSpan="2"
+            Margin="10,10,10,10"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            IsExpanded="{Binding ShowAuthDetails}"
+            Header="HTTP Authentication" FontSize="12">
+
+            <Grid
+                Margin="10,10,0,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <TextBlock
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Margin="0,2,0,2"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Text="Username" />
+                <TextBox
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    MinWidth="200"
+                    MaxWidth="200"
+                    Margin="10,2,10,2"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    HorizontalScrollBarVisibility="Auto"
+                    MaxLines="1"
+                    Text="{Binding HttpAuthUsername}"
+                    TextWrapping="NoWrap" />
+
+                <TextBlock
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Margin="0,2,0,2"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Text="Password" />
+                <TextBox
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    MinWidth="200"
+                    MaxWidth="200"
+                    Margin="10,2,10,2"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    HorizontalScrollBarVisibility="Auto"
+                    MaxLines="1"
+                    Text="{Binding HttpAuthPassword}"
+                    TextWrapping="NoWrap" />
+            </Grid>
+        </Expander>
+
+        <Button
+            Grid.Row="6"
             Grid.ColumnSpan="2"
             Width="150"
             Margin="10,10,10,10"
